15-GatewayApI/ref-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 80
